# trakt-scrobbler

./: .coafile  .gitignore  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml  requirements.txt  sample_config.toml  sample_config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  installation-help.md
.github/workflows/: build.yml  release.yml
completions/: Readme.zsh.md  trakts.zsh
scripts/: linux-install-service.sh  trakt_scrobbler.plist  windows-install.bat
systemd/user/: README  trakt-scrobbler.service
tests/: test_monitor.py  test_scrobbler.py  test_trakt_interface.py
tools/: install.py
trakt_scrobbler/: __init__.py  __main__.py  __version__.py  _cleo.py  app_dirs.py  backlog_cleaner.py  cache.json  commands.py  config.py  config_default.yaml  configuration.py  console.py  file_info.py  log_config.py  main.py  mediainfo_remap.py  metadata_remap.py  notifier.py  player_monitor.py  sample_config.toml  scrobbler.py  trakt_auth.py  trakt_interface.py  trakt_key_holder.py  utils.py  winserv.py
trakt_scrobbler/cli/: __init__.py  autostart.py  backlog.py  config.py  console.py  init.py  log.py  lookup.py  main.py  plex.py  remap.py  run.py  start.py  status.py  stop.py  test.py  trakt.py  utils.py  whitelist.py
trakt_scrobbler/commands/: autostart.py  backlog.py  command.py  config.py  init.py  log.py  lookup.py  pause.py  plex.py  remap.py  run.py  start.py  status.py  stop.py  test.py  trakt.py  whitelist.py
trakt_scrobbler/data/: sample_config.toml
trakt_scrobbler/player_monitors/: __init__.py  monitor.py  mpc.py  mpchc.py  mpv.py  mpv_wrappers.py  plex.py  vlc.py
trakt_scrobbler/players/: mpchc.py  player.py  vlc.py
