[tool.poetry]
name = "trakt-scrobbler"
version = "1.7.0"
description = "Scrobbler for trakt.tv that supports VLC, Plex, MPC-HC, and MPV"
authors = ["iamkroot <kroot.patel@gmail.com>"]
readme = "README.md"
repository = "https://github.com/iamkroot/trakt-scrobbler"
license = "GPL-2.0-only"
keywords = ["trakt", "scrobbler"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
include = [
	{path = "tests", format = "sdist"},
	{path = "completions/**/*.*?sh", format = "sdist"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
requests = "^2.31.0"
urllib3 = "^1.26.0"
guessit = "^3.7.1"
appdirs = "^1.4.4"
pywin32 = {version = ">=227", platform = "win32"}
cleo = "^0.8.1"
confuse = "^2.0"
pysocks = {version = "^1.7.1", optional = true}
urlmatch = "^1.0.1"
pydantic = "^2.4"
pydantic-core = "^2.10.1"
tomli = {version = "^2.0.1", python = "<3.11"}
desktop-notifier = "^5.0.0"
# win10toast = {version = "^0.9", platform = "win32"}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
socks = ["pysocks"]

[tool.poetry.scripts]
trakts = "trakt_scrobbler.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportGeneralTypeIssues = false
reportImplicitStringConcatenation = false

[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = true
