[project]
name = "trakt-scrobbler"
version = "1.9.0b1"
description = "Scrobbler for trakt.tv that supports VLC, Plex, MPC-HC, and MPV"
authors = [{ name = "iamkroot", email = "kroot.patel@gmail.com" }]
requires-python = ">=3.9,<3.15"
readme = "README.md"
license = "GPL-2.0-only"
keywords = [
    "trakt",
    "scrobbler",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0,<3",
    "urllib3>=2.5.0,<3",
    "guessit>=3.7.1,<4",
    "appdirs>=1.4.4,<2",
    "pywin32>=227 ; sys_platform == 'win32'",
    "confuse>=2.1.0,<3",
    "urlmatch>=1.0.1,<2",
    "pydantic>=2.12",
    # "pydantic-core>=2.10.1,<3",
    "tomli>=2.0.1,<3 ; python_version < '3.11'",
    "desktop-notifier>=6.1.0,<7",
    "typer>=0.21.1",
]

[project.optional-dependencies]
socks = ["pysocks>=1.7.1,<2"]

[project.urls]
repository = "https://github.com/iamkroot/trakt-scrobbler"

[project.scripts]
trakts = "trakt_scrobbler.cli.main:app"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["trakt_scrobbler"]

[tool.hatch.build.targets.sdist]
include = [
    "trakt_scrobbler/**/*.py",
    "trakt_scrobbler/config_default.yaml",
    # "tests",
    "completions/**/*.*?sh",
]

[tool.setuptools]
packages = ["trakt_scrobbler"]
# [tool.uv.build-backend]
# module-root = "."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportGeneralTypeIssues = true
typeCheckingMode = "basic"
reportImplicitStringConcatenation = false
reportUnknownParameterType = false
reportMissingParameterType = false

[tool.black]
line-length = 88
target-version = ['py314']
skip-string-normalization = true
